main.css
body {
    background-color: #efe5e5;
    min-height: 100vh;
    margin: 0;
}

main {
    padding-bottom: 1rem;
    padding-left: 2em;
    padding-right: 2em;
    text-align: center;
    color: #5C1932;
    font-family: "Roboto", "Helvetica Neue", sans-serif;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/Roboto-Light.ttf');
}

@font-face {
    font-family: 'Goudy Bookletter 1911';
    src: url('fonts/GoudyBookletter1911-Regular.ttf');
}

@font-face {
    font-family: "Helvetica Neue";
    src: url('fonts/HelveticaNeue-Light.otf');
}

h1, h2 {
    font-family: "Goudy Bookletter 1911";
    font-weight: 300;
}

p {
    margin: auto;
    padding-bottom: 1em;
    line-height: 1.5;
    max-width: 30rem;
}

a {
    font-family: "Roboto", "Helvetica Neue", sans-serif;
    font-weight: bold;
    color: #5C1932; /* orbis red: menu background and font color*/
    text-decoration: none;
    -o-transition:.5s;
    -ms-transition:.5s;
    -moz-transition:.5s;
    -webkit-transition:.5s;
    /* ...and now for the proper property */
    transition:.5s;
}

a:hover {
    text-decoration: underline;
}

.header {
    height: 70vh;
    width: 100vw;
    padding: 0;
    margin: 0 0 -4px 0;
    overflow: hidden;
    position: relative;
}

.header > img {
    object-fit: cover;
    object-position: center center;
    width: 100%;
    height: 100%;
}

nav {
    display: flex;
    justify-content: center;
    background-color: #5C1932;
    position: sticky;
    /* position: -webkit-sticky; */
    top: 0;
}

nav > a {
    margin: 0;
    padding: 1em;
    color: #efe5e5;
}

nav > a:hover {
    background-color: #270a15;
    text-decoration: none;
}

footer {
    border-top: 3px solid #5C1932;
    background-color: #efe5e5;
    padding: 5px;
    display: flex;
    justify-content: center;
    width: 100vw;
    height: 4.3rem;
    bottom: 0;
}

footer > a > img {
    width: 3rem;
    height: 3rem;
    padding: 0.5em;
}

